--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.0.150:3306/fanhui?useSSL=false
+    url: jdbc:mysql://192.168.0.150:3306/fanhui?autoReconnect=true
     username: dbadmin
     password: 2017admin*QMX
     driver-class-name: com.mysql.jdbc.Driver
